--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -15,7 +15,7 @@
                    
                     <nav class="cabecalhoMenu">
                         <div class="cabecalhoMenudiv1">
-                            <img class="cabecalhoLogo" src="WayPlan somentelogoOriginal.png" alt="Logo da empresa WayPlan">
+                            <img class="cabecalhoLogo" src="../Landing Page/WayPlan somentelogoOriginal.png" alt="Logo da empresa WayPlan">
 
                             <a class="cabecalhoTituloLogo">WayPlan</a>
                         </div>
